--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,13 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    %nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
+      = link_to 'Main page', root_path
+      %ul.navbar-nav
+        %li.nav-item
+          %a.nav-link{:href => "#"} Link 1
+        %li.nav-item
+          %a.nav-link{:href => "#"} Link 2
+        %li.nav-item
+          %a.nav-link{:href => "#"} Link 3
     = yield
