--- a/app/views/products/show.haml
+++ b/app/views/products/show.haml
@@ -1,9 +1,9 @@
 .container
   .row
-    .col-xs-12.col-sm-8.offset-sm-2
-      %h1 Movies
+    .col-xs-12.col-sm-8.offset-sm-2.text-center
+      %h1= @product.name
       -#= image_tag(@product.avatar) if @product.avatar
-      %img{ src: @product.avatar }
-      %h3= @product.name
+      %img{ src: @product.avatar, width: "300", height: "355" }
       %p= @product.description
-      %h3= @product.price
+      %h3 Price: #{@product.price} $
+      %button.btn.btn-warning{type: 'button'} Create Order
