--- a/app/views/products/show.haml
+++ b/app/views/products/show.haml
@@ -4,6 +4,6 @@
       %h1= @product.name
       -#= image_tag(@product.avatar) if @product.avatar
       %img{ src: @product.avatar, width: "300", height: "355" }
-      %p= @product.description
+      %p.text-justify= @product.description
       %h3 Price: #{@product.price} $
       %button.btn.btn-warning{type: 'button'} Create Order
