--- a/app/views/contacts/show.haml
+++ b/app/views/contacts/show.haml
@@ -1,6 +1,7 @@
 .container
   .row
     .col-xs-12.col-sm-8.offset-sm-2.text-center
-      %h3 email: #{@merchant.email}
-      %h3 phone number: #{@merchant.phone}
-      %h3= 'location: ' + @merchant.location if @merchant.location
+      %h3 email: #{@contacts.email}
+      %h3 phone number: #{@contacts.phone}
+      - if @contacts.address?
+        %h3= "location: #{@contacts.address}"
