--- a/app/views/orders/new.haml
+++ b/app/views/orders/new.haml
@@ -1,16 +1,15 @@
 .container
   .row
-    .col-xs-12.col-sm-8.offset-sm-2.card{ style: 'margin-top: 30px; margin-bottom: 30px;' }
-      %br
+    .col-xs-12.col-sm-8.offset-sm-2.card{ style: 'margin-top: 30px; margin-bottom: 30px; padding-top: 20px' }
       = simple_form_for @create_user_and_order_form, url: orders_path do |f|
         = f.error_notification
-        = f.input :email, input_html: { autocomplete: 'email' }
-        -#= f.input :password, input_html: { autocomplete: 'current-password' }
-
         = f.input :count_of_products, input_html: { type: 'number', value: '1' }
-        = f.input :total_price
-        -#= f.input :terms
+        = f.input :email, input_html: { autocomplete: 'email' }
+        = f.input :user_first_name
+        = f.input :user_last_name
+        = f.input :region, collection: @regions, label: 'Region'
+        = f.input :warehouse, collection: []
         .buttons.text-center
-          = f.button :submit, 'Create', class: "btn-primary "
-          = f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary"
+          = f.button :submit, 'Create', class: 'btn-primary '
+          = f.button :button, "Cancel", type: 'reset', class: 'btn-outline-secondary'
       %br
