complete order form and add js

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,5 +18,5 @@
         %li.nav-item
           = link_to 'Contacts', contacts_path, class: 'nav-link'
         %li.nav-item.nav-link
-          = dollar_rate
+          $#{dollar_rate}
     = yield
