setup editor, refactor model

--- a/app/views/payments_and_deliveries/show.haml
+++ b/app/views/payments_and_deliveries/show.haml
@@ -6,6 +6,6 @@
         %h3= payment.payment_type
         %h3= payment.description
       %h1 Deliveries:
-      - @deliveries_infos.each do |delivery|
+      - @delivery_infos.each do |delivery|
         %h3= delivery.delivery_type
         %h3= delivery.description
