--- a/app/views/orders/new.haml
+++ b/app/views/orders/new.haml
@@ -1,6 +1,6 @@
 .container
   .row
-    .col-xs-12.col-sm-8.offset-sm-2.card{ style: 'margin-top: 30px; margin-bottom: 30px; padding-top: 20px' }
+    .col-xs-12.col-sm-8.offset-sm-2.card{ style: 'margin-top: 30px; margin-bottom: 30px; padding: 20px;' }
       = simple_form_for @create_user_and_order_form, url: orders_path do |f|
         = f.error_notification
         = f.input :count_of_products, input_html: { type: 'number', value: 1 }
@@ -29,4 +29,3 @@
         .buttons.text-center
           = f.button :submit, 'Create', class: 'btn-primary '
           = f.button :button, "Cancel", type: 'reset', class: 'btn-outline-secondary'
-      %br
