--- a/app/views/payments_and_deliveries/show.haml
+++ b/app/views/payments_and_deliveries/show.haml
@@ -1,11 +1,1 @@
-.container
-  .row
-    .col-xs-12.col-sm-8.offset-sm-2.text-center
-      %h1 Payment methods:
-      - @payment_infos.each do |payment|
-        %h3= payment.payment_type
-        %h3= payment.description
-      %h1 Deliveries:
-      - @delivery_infos.each do |delivery|
-        %h3= delivery.delivery_type
-        %h3= delivery.description
+%p= @payment_and_delivery_info.html_safe if @payment_and_delivery_info
