refactor static controllers, views

--- a/app/views/payments_and_deliveries/show.haml
+++ b/app/views/payments_and_deliveries/show.haml
@@ -1,1 +1,1 @@
-%p= @payment_and_delivery_info.html_safe if @payment_and_delivery_info
+= sanitize @payment_and_delivery_info.html_safe if @payment_and_delivery_info
