--- a/app/views/products/show.haml
+++ b/app/views/products/show.haml
@@ -1,1 +1,4 @@
-%p=@product.description.html_safe
+.container
+  .row
+    .col-xs-12.col-sm-8.offset-sm-2.text-center
+      %p= sanitize @product_info.html_safe
