add UsdRate model

--- a/app/views/orders/new.haml
+++ b/app/views/orders/new.haml
@@ -16,7 +16,7 @@
         %p
           Usd rate:
           %span#usd_rate
-            #{dollar_rate}
+            =@usd_rate
         %p
           One product price:
           %span#product_price
