fix total price, seed

--- a/app/views/orders/new.haml
+++ b/app/views/orders/new.haml
@@ -18,9 +18,9 @@
           %span#usd_rate
             =@usd_rate
         %p
-          One product price:
+          One product price, $:
           %span#product_price
-            #{product_price_in_usd}$
+            #{product_price_in_usd}
         %p
           Count of products selected:
           %span#products_count
