--- a/app/views/products/show.haml
+++ b/app/views/products/show.haml
@@ -1,4 +1,5 @@
 .container
-  .row
-    .col-xs-12.col-sm-8.offset-sm-2.text-center
+  .row.align-items-center
+    -#.col-xs-12.col-sm-8.offset-sm-2.text-center
+    .col-md-6.text-center
       %p= raw @product_info
